--- a/warcraftplugin/src/main/res/layout/activity_main.xml
+++ b/warcraftplugin/src/main/res/layout/activity_main.xml
@@ -7,25 +7,25 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textSize="20sp"
-        android:text="Hello to war3! this is war3Plugin! "
 
-         />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/war3banner"
-        />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="来开打啊"
+        android:text="加载fragment到下方容器"
         android:onClick="clickButton"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="下方容器移除fragment"
+        android:onClick="clickButton2"
+        />
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:background="@android:color/darker_gray"
         />
 </LinearLayout>
