--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingTop="10dp"
+        android:paddingTop="1dp"
         android:paddingBottom="10dp"
         android:text="I'm Host"
         android:textSize="20sp"
         android:textStyle="bold"
+        />
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
         />
 
     <Button
@@ -54,12 +60,13 @@
         android:alpha="0.5"
         android:text="跳转到第二个Activity"
         />
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:layout_below="@+id/mainTv"
+    <Button
+        android:id="@+id/btn5"
+        android:layout_below="@+id/btn4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0.5"
+        android:text="清理"
         />
 
 </RelativeLayout>
