--- a/warcraftplugin/src/main/res/layout/patch_fragment.xml
+++ b/warcraftplugin/src/main/res/layout/patch_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#aaD81B60"
     android:orientation="vertical">
 
     <TextView
@@ -19,6 +20,7 @@
         android:id="@+id/iv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:src="@drawable/war3banner"
         />
 
     <Button
