--- a/warcraftplugin/src/main/res/layout/patch_fragment.xml
+++ b/warcraftplugin/src/main/res/layout/patch_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#aaD81B60"
+    android:background="#ffD81B60"
     android:orientation="vertical">
 
     <TextView
@@ -13,7 +13,6 @@
         android:gravity="center_horizontal"
         android:textSize="20sp"
         android:text="Hello to war3! this is war3Plugin Fragment! "
-
         />
 
     <ImageView
@@ -21,6 +20,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/war3banner"
+        />
+    <ImageView
+        android:id="@+id/iv2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:src="@drawable/war3banner2"
         />
 
     <Button
