--- a/app/src/main/res/layout/second_activity.xml
+++ b/app/src/main/res/layout/second_activity.xml
@@ -38,4 +38,12 @@
         android:onClick="getDrawable"
         />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button2"
+        android:text="gotoThirdActivity"
+        android:onClick="gotoThirdActivity"
+        />
 </RelativeLayout>
